mysqlでうまくいったバージョン

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -63,9 +63,12 @@ db.default.user=root
 db.default.password=passwd
 
 # Connection Pool settings
+db.default.poolInitialSize=100
 db.default.maxPoolSize=100
 db.default.maxIdleMillis=1000
 db.default.maxQueueSize=99
+db.default.connectionTimeoutMillis=1000
+#db.default.poolValidationQuery="select 1 as one"
 
 # Evolutions
 # ~~~~~
